--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="shortcut icon" href="images/captain's pizza logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Captain's Pizza</title>
@@ -25,7 +26,6 @@
                         <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
                     </svg>
                 </label>
-                <a href="#Home">Home</a>
                 <a href="#Appetizers">Appetizers</a>
                 <a href="#Salads">Salads</a>
                 <a href="#About">Pizza</a>
@@ -111,6 +111,18 @@
                 </div>
             </div>
       </section>
+
+
+
+
+
+
+      <!-- social media icon -->
+       <section>
+            <div class="social-media-icon">
+                <a href="https://instagram.com/captains.pizza"><i class='bx bxl-instagram'></i></a>
+            </div>
+       </section>
 
       <!-- footer -->
        <footer>
