--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Captain's Pizza</title>
   </head>
   <body>
+    <!-- header -->
     <header>
       <nav>
         <div class="logo">Captain's Pizza</div>
@@ -70,6 +71,15 @@
         </div>
       </div>
     </section>
+
+    <!-- back to top button -->
+     <section id="backtotop">
+      <div class="back-to-top">
+        <a href="#Home">
+          <i class='bx bx-up-arrow-circle' ></i>
+        </a>
+      </div>
+     </section>
 
     <!-- social media icon -->
     <section id="Rateandsocial">
@@ -646,8 +656,7 @@
         <h2>DRINKS</h2>
       </div>
       <!-- item -->
-      <div class="section-container">
-        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+      <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
             <h1>Soft Drinks</h1>
@@ -659,8 +668,7 @@
         </div>
       </div>
       <!-- item -->
-      <div class="section-container">
-        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+      <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
             <h1>
@@ -675,8 +683,7 @@
         </div>
       </div>
       <!-- item -->
-      <div class="section-container">
-        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+      <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
             <h1>
@@ -691,8 +698,7 @@
         </div>
       </div>
       <!-- item -->
-      <div class="section-container">
-        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+      <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
             <h1>Sparkling Water</h1>
@@ -704,8 +710,7 @@
         </div>
       </div>
       <!-- item -->
-      <div class="section-container">
-        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+      <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
             <h1>Ice Tea</h1>
@@ -717,8 +722,7 @@
         </div>
       </div>
       <!-- item -->
-      <div class="section-container">
-        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+      <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
             <h1>Local Beer</h1>
@@ -730,8 +734,7 @@
         </div>
       </div>
       <!-- item -->
-      <div class="section-container">
-        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+      <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
             <h1>Imported Beer</h1>
@@ -753,8 +756,7 @@
         <h2>ADD EXTRA</h2>
       </div>
       <!-- item -->
-      <div class="section-container">
-        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+      <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
             <h1>Mushroom</h1>
@@ -766,8 +768,7 @@
         </div>
       </div>
       <!-- item -->
-      <div class="section-container">
-        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+      <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
             <h1>
@@ -781,8 +782,7 @@
         </div>
       </div>
       <!-- item -->
-      <div class="section-container">
-        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+      <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
             <h1>
@@ -796,8 +796,7 @@
         </div>
       </div>
       <!-- item -->
-      <div class="section-container">
-        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+      <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
             <h1>Ham</h1>
@@ -809,8 +808,7 @@
         </div>
       </div>
       <!-- item -->
-      <div class="section-container">
-        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+      <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
             <h1>Any Sauce</h1>
@@ -832,8 +830,7 @@
         <h2>ARGUILE</h2>
       </div>
       <!-- item -->
-      <div class="section-container">
-        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+      <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
             <h1>Lemon & Mint</h1>
@@ -845,8 +842,7 @@
         </div>
       </div>
       <!-- item -->
-      <div class="section-container">
-        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+      <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
             <h1>
@@ -860,8 +856,7 @@
         </div>
       </div>
       <!-- item -->
-      <div class="section-container">
-        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+      <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
             <h1>
@@ -875,8 +870,7 @@
         </div>
       </div>
       <!-- item -->
-      <div class="section-container">
-        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+      <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
             <h1>Mint</h1>
