--- a/index.html
+++ b/index.html
@@ -48,13 +48,10 @@
               />
             </svg>
           </label>
-          <a href="#Appetizers">Appetizers</a>
-          <a href="#Salads">Salads</a>
-          <a href="#Pizza">Pizza</a>
-          <a href="#Burgers">Burgers</a>
-          <a href="#Drinks">Drinks</a>
-          <a href="#Add-extra">Add Extra</a>
-          <a href="#Arguile">Arguile</a>
+          <a href="#Appetizers">Home</a>
+          <a href="#Appetizers">About</a>
+          <a href="#Salads">Menu</a>
+          <a href="#Pizza">Contact</a>
         </div>
       </nav>
     </header>
@@ -121,6 +118,22 @@
         <a href="tel:+961 71 883916"><i class="bx bxs-phone"></i>Douma</a>
       </div>
     </section>
+
+    <!-- menu navlinks -->
+     <section id="Menu">
+        <div class="menu-bar">
+          <ul class="menu-list">
+            <li class="menu-item"><a href="#Appetizers">Appetizers</a></li>
+            <li class="menu-item"><a href="#Salads">Salads</a></li>
+            <li class="menu-item"><a href="#Pizza">Pizza</a></li>
+            <li class="menu-item"><a href="#Burgers">Burgers</a></li>
+            <li class="menu-item"><a href="#Drinks">Drinks</a></li>
+            <li class="menu-item"><a href="#Add-extra">Add Extra</a></li>
+            <li class="menu-item"><a href="#Arguile">Arguile</a></li>
+          </ul>          
+        </div>
+     </section>
+    
 
     <!-- appetizers section -->
     <section id="Appetizers" class="Section">
