--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
       <div class="section-container" style="padding: 40px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
-            <h1>Mint</h1>
+            <h1>Extra Flavors</h1>
             <h1>5.00$</h1>
           </div>
           <div class="section-item-description">
