--- a/index.html
+++ b/index.html
@@ -19,39 +19,6 @@
     <header>
       <nav>
         <div class="logo">Captain's Pizza</div>
-        <input type="checkbox" id="sidebar-active" />
-        <label for="sidebar-active" class="open-sidebar-button">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            height="32px"
-            viewBox="0 -960 960 960"
-            width="32px"
-            fill="#5f6368"
-          >
-            <path
-              d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
-            />
-          </svg>
-        </label>
-        <label for="sidebar-active" id="overlay"></label>
-        <div class="links-container">
-          <label for="sidebar-active" class="close-sidebar-button">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              height="32px"
-              viewBox="0 -960 960 960"
-              width="32px"
-              fill="#5f6368"
-            >
-              <path
-                d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"
-              />
-            </svg>
-          </label>
-          <a href="#Appetizers">Home</a>
-          <a href="#Appetizers">About</a>
-          <a href="#Salads">Menu</a>
-          <a href="#Pizza">Contact</a>
         </div>
       </nav>
     </header>
@@ -61,10 +28,9 @@
       <div class="home-container">
         <div class="logo-wrapper">
           <img
-            src="images/captain's pizza logo 1.png"
+            src="images/WoodOven inside Logo.png"
             alt="Captain's Pizza Logo"
           />
-          <p>WOOD OVEN</p>
         </div>
       </div>
     </section>
@@ -900,32 +866,6 @@
     <section id="Rateandsocial">
       <div class="rate-and-icon">
         <p>Rate = 90,000L.L</p>
-        <div class="social-media-icon">
-          <div class="social-media-icon-and-name">
-            <a href="https://instagram.com/captains.pizza"
-              ><i class="bx bxl-instagram"></i
-            ></a>
-            <p>instagram</p>
-          </div>
-          <div class="social-media-icon-and-name">
-            <a
-              href="https://www.facebook.com/profile.php?id=100066420747274&mibextid=ZbWKwL"
-              ><i class="bx bxl-facebook"></i
-            ></a>
-            <p>facebook</p>
-          </div>
-          <div class="social-media-icon-and-name">
-            <a href=""><i class="bx bxs-phone"></i></a>
-            <p>phone</p>
-          </div>
-          <div class="social-media-icon-and-name">
-            <a
-              href="https://www.google.com/maps/d/u/0/edit?mid=1K0riTFrMiZmBJa9nIjDUgYuA73XvmbY&usp=sharing"
-              ><i class="bx bx-current-location"></i
-            ></a>
-            <p>location</p>
-          </div>
-        </div>
       </div>
       <!-- Custom Alert Overlay -->
       <div id="custom-alert-overlay"></div>
@@ -938,7 +878,7 @@
     </section>
 
     <!-- footer -->
-    <footer>&copy; 2024 Captain's Pizza. All Right Reserved.</footer>
+    <footer>&copy; 2024 Captain's Pizza. All Right Reserved. <br> Privacy Policy</footer>
 
     <script src="script.js"></script>
   </body>
