--- a/index.html
+++ b/index.html
@@ -86,20 +86,19 @@
     </section>
 
     <!-- menu navlinks -->
-     <section id="Menu">
-        <div class="menu-bar">
-          <ul class="menu-list">
-            <li class="menu-item"><a href="#Appetizers">Appetizers</a></li>
-            <li class="menu-item"><a href="#Salads">Salads</a></li>
-            <li class="menu-item"><a href="#Pizza">Pizza</a></li>
-            <li class="menu-item"><a href="#Burgers">Burgers</a></li>
-            <li class="menu-item"><a href="#Drinks">Drinks</a></li>
-            <li class="menu-item"><a href="#Add-extra">Add Extra</a></li>
-            <li class="menu-item"><a href="#Arguile">Arguile</a></li>
-          </ul>          
-        </div>
-     </section>
-    
+    <section id="Menu">
+      <div class="menu-bar">
+         <ul class="menu-list">
+            <a href="#Appetizers"><li class="menu-item">Appetizers</li></a>
+            <a href="#Salads"><li class="menu-item">Salads</li></a>
+            <a href="#Pizza"><li class="menu-item">Pizza</li></a>
+            <a href="#Burgers"><li class="menu-item">Burgers</li></a>
+            <a href="#Drinks"><li class="menu-item">Drinks</li></a>
+            <a href="#Add-extra"><li class="menu-item">Add Extra</li></a>
+            <a href="#Arguile"><li class="menu-item">Arguile</li></a>
+         </ul>          
+      </div>
+   </section>   
 
     <!-- appetizers section -->
     <section id="Appetizers" class="Section">
@@ -867,15 +866,6 @@
       <div class="rate-and-icon">
         <p>Rate = 90,000L.L</p>
       </div>
-      <!-- Custom Alert Overlay -->
-      <div id="custom-alert-overlay"></div>
-      <div id="custom-alert">
-        <button class="close-btn" onclick="closeCustomAlert()">X</button>
-        <a href="tel:+961 81 635636" style="margin-top: 70px"><i class="bx bxs-phone"></i>Batroun</a>
-        <a href="tel:+961 76 781780"><i class="bx bxs-phone"></i>Jbeil</a>
-        <a href="tel:+961 71 883916"><i class="bx bxs-phone"></i>Douma</a>
-      </div>
-    </section>
 
     <!-- footer -->
     <footer>&copy; 2024 Captain's Pizza. All Right Reserved. <br> Privacy Policy</footer>
