--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <header>
       <nav>
         <div class="logo">Captain's Pizza</div>
-        </div>
       </nav>
     </header>
     
@@ -86,19 +85,20 @@
     </section>
 
     <!-- menu navlinks -->
-    <section id="Menu">
-      <div class="menu-bar">
-         <ul class="menu-list">
-            <a href="#Appetizers"><li class="menu-item">Appetizers</li></a>
-            <a href="#Salads"><li class="menu-item">Salads</li></a>
-            <a href="#Pizza"><li class="menu-item">Pizza</li></a>
-            <a href="#Burgers"><li class="menu-item">Burgers</li></a>
-            <a href="#Drinks"><li class="menu-item">Drinks</li></a>
-            <a href="#Add-extra"><li class="menu-item">Add Extra</li></a>
-            <a href="#Arguile"><li class="menu-item">Arguile</li></a>
-         </ul>          
-      </div>
-   </section>   
+     <section id="Menu">
+        <div class="menu-bar">
+          <ul class="menu-list">
+            <li class="menu-item"><a href="#Appetizers">Appetizers</a></li>
+            <li class="menu-item"><a href="#Salads">Salads</a></li>
+            <li class="menu-item"><a href="#Pizza">Pizza</a></li>
+            <li class="menu-item"><a href="#Burgers">Burgers</a></li>
+            <li class="menu-item"><a href="#Drinks">Drinks</a></li>
+            <li class="menu-item"><a href="#Add-extra">Add Extra</a></li>
+            <li class="menu-item"><a href="#Arguile">Arguile</a></li>
+          </ul>          
+        </div>
+     </section>
+    
 
     <!-- appetizers section -->
     <section id="Appetizers" class="Section">
@@ -851,7 +851,7 @@
       <div class="section-container" style="padding: 40px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
-            <h1>Extra Flavors</h1>
+            <h1>Any Other Flavor</h1>
             <h1>5.00$</h1>
           </div>
           <div class="section-item-description">
@@ -866,9 +866,10 @@
       <div class="rate-and-icon">
         <p>Rate = 90,000L.L</p>
       </div>
+    </section>
 
     <!-- footer -->
-    <footer>&copy; 2024 Captain's Pizza. All Right Reserved. <br> Privacy Policy</footer>
+    <footer>&copy; 2024 Captain's Pizza. All Right Reserved.</footer>
 
     <script src="script.js"></script>
   </body>
