--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <header>
       <nav>
         <div class="logo">Captain's Pizza</div>
+        </div>
       </nav>
     </header>
     
@@ -46,8 +47,19 @@
     <!-- social media icon -->
     <section id="Rateandsocial">
       <div class="rate-and-icon">
-        <p>Rate = 90,000L.L</p>
+        <p>Dollar Rate = 90,000L.L</p>
         <div class="social-media-icon">
+          <div class="social-media-icon-and-name">
+            <a href=""><i class="bx bxs-phone"></i></a>
+            <p>phone</p>
+          </div>
+          <div class="social-media-icon-and-name">
+            <a
+              href="https://www.google.com/maps/d/u/0/edit?mid=1K0riTFrMiZmBJa9nIjDUgYuA73XvmbY&usp=sharing"
+              ><i class="bx bx-current-location"></i
+            ></a>
+            <p>location</p>
+          </div>
           <div class="social-media-icon-and-name">
             <a href="https://instagram.com/captains.pizza"
               ><i class="bx bxl-instagram"></i
@@ -61,17 +73,6 @@
             ></a>
             <p>facebook</p>
           </div>
-          <div class="social-media-icon-and-name">
-            <a href=""><i class="bx bxs-phone"></i></a>
-            <p>phone</p>
-          </div>
-          <div class="social-media-icon-and-name">
-            <a
-              href="https://www.google.com/maps/d/u/0/edit?mid=1K0riTFrMiZmBJa9nIjDUgYuA73XvmbY&usp=sharing"
-              ><i class="bx bx-current-location"></i
-            ></a>
-            <p>location</p>
-          </div>
         </div>
       </div>
       <!-- Custom Alert Overlay -->
@@ -79,26 +80,24 @@
       <div id="custom-alert">
         <button class="close-btn" onclick="closeCustomAlert()">X</button>
         <a href="tel:+961 81 635636" style="margin-top: 70px"><i class="bx bxs-phone"></i>Batroun</a>
-        <a href="tel:+961 76 781780"><i class="bx bxs-phone"></i>Jbeil</a>
         <a href="tel:+961 71 883916"><i class="bx bxs-phone"></i>Douma</a>
       </div>
     </section>
 
     <!-- menu navlinks -->
-     <section id="Menu">
-        <div class="menu-bar">
-          <ul class="menu-list">
-            <li class="menu-item"><a href="#Appetizers">Appetizers</a></li>
-            <li class="menu-item"><a href="#Salads">Salads</a></li>
-            <li class="menu-item"><a href="#Pizza">Pizza</a></li>
-            <li class="menu-item"><a href="#Burgers">Burgers</a></li>
-            <li class="menu-item"><a href="#Drinks">Drinks</a></li>
-            <li class="menu-item"><a href="#Add-extra">Add Extra</a></li>
-            <li class="menu-item"><a href="#Arguile">Arguile</a></li>
-          </ul>          
-        </div>
-     </section>
-    
+    <section id="Menu">
+      <div class="menu-bar">
+         <ul class="menu-list">
+            <a href="#Appetizers"><li class="menu-item">Appetizers</li></a>
+            <a href="#Salads"><li class="menu-item">Salads</li></a>
+            <a href="#Pizza"><li class="menu-item">Pizza</li></a>
+            <a href="#Burgers"><li class="menu-item">Burgers</li></a>
+            <a href="#Drinks"><li class="menu-item">Drinks</li></a>
+            <a href="#Add-extra"><li class="menu-item">Add Extra</li></a>
+            <a href="#Arguile"><li class="menu-item">Arguile</li></a>
+         </ul>          
+      </div>
+   </section>   
 
     <!-- appetizers section -->
     <section id="Appetizers" class="Section">
@@ -851,7 +850,7 @@
       <div class="section-container" style="padding: 40px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
-            <h1>Any Other Flavor</h1>
+            <h1>Extra Flavors</h1>
             <h1>5.00$</h1>
           </div>
           <div class="section-item-description">
@@ -864,12 +863,12 @@
     <!-- social media icon -->
     <section id="Rateandsocial">
       <div class="rate-and-icon">
-        <p>Rate = 90,000L.L</p>
+        <p>Dollar Rate = 90,000L.L</p>
       </div>
     </section>
 
     <!-- footer -->
-    <footer>&copy; 2024 Captain's Pizza. All Right Reserved.</footer>
+    <footer>&copy; 2024 Captain's Pizza. All Right Reserved. <br> Privacy Policy</footer>
 
     <script src="script.js"></script>
   </body>
