--- a/index.html
+++ b/index.html
@@ -633,6 +633,23 @@
         <h2>DRINKS</h2>
       </div>
       <!-- item -->
+      <div class="section-container" style="padding: 40px 10px;">
+        <div class="section-item-container">
+          <div class="section-name-and-price-pizza" style="display: flex;">
+            <h1>
+              <p>Water</p>
+              <h1 class="price" style="display: flex; gap: 30px;">
+                <p><em>S: </em>0.50$</p>
+                <p><em>L: </em>1.00$</p>
+              </h1>
+            </h1>
+          </div>
+          <div class="section-item-description">
+            <h2></h2>
+          </div>
+        </div>
+      </div>
+      <!-- item -->
       <div class="section-container" style="padding: 30px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
@@ -641,36 +658,6 @@
           </div>
           <div class="section-item-description">
             <h2>Pepsi, Miranda, 7up</h2>
-          </div>
-        </div>
-      </div>
-      <!-- item -->
-      <div class="section-container" style="padding: 30px 10px;">
-        <div class="section-item-container">
-          <div class="section-name-and-price">
-            <h1>
-              <p>Water</p>
-              <span>Small</span>
-            </h1>
-            <h1>0.50$</h1>
-          </div>
-          <div class="section-item-description">
-            <h2></h2>
-          </div>
-        </div>
-      </div>
-      <!-- item -->
-      <div class="section-container" style="padding: 30px 10px;">
-        <div class="section-item-container">
-          <div class="section-name-and-price">
-            <h1>
-              <p>Water</p>
-              <span>Large</span>
-            </h1>
-            <h1>1.00$</h1>
-          </div>
-          <div class="section-item-description">
-            <h2></h2>
           </div>
         </div>
       </div>
@@ -810,51 +797,11 @@
       <div class="section-container" style="padding: 40px 10px;">
         <div class="section-item-container">
           <div class="section-name-and-price">
-            <h1>Lemon & Mint</h1>
+            <h1>Regular</h1>
             <h1>5.00$</h1>
           </div>
           <div class="section-item-description">
-            <h2></h2>
-          </div>
-        </div>
-      </div>
-      <!-- item -->
-      <div class="section-container" style="padding: 40px 10px;">
-        <div class="section-item-container">
-          <div class="section-name-and-price">
-            <h1>
-              <p>Two Apples</p>
-            </h1>
-            <h1>5.00$</h1>
-          </div>
-          <div class="section-item-description">
-            <h2></h2>
-          </div>
-        </div>
-      </div>
-      <!-- item -->
-      <div class="section-container" style="padding: 40px 10px;">
-        <div class="section-item-container">
-          <div class="section-name-and-price">
-            <h1>
-              <p>Grape</p>
-            </h1>
-            <h1>5.00$</h1>
-          </div>
-          <div class="section-item-description">
-            <h2></h2>
-          </div>
-        </div>
-      </div>
-      <!-- item -->
-      <div class="section-container" style="padding: 40px 10px;">
-        <div class="section-item-container">
-          <div class="section-name-and-price">
-            <h1>Extra Flavors</h1>
-            <h1>5.00$</h1>
-          </div>
-          <div class="section-item-description">
-            <h2></h2>
+            <h2>We have all flavors</h2>
           </div>
         </div>
       </div>
