--- a/index-menu.html
+++ b/index-menu.html
@@ -356,9 +356,7 @@
       </div>
     </section>
 
-    <!-- image section -->
-    <section id="Image2"></section>
-
+   <!-- pizza section -->
     <section id="Pizza" class="Section">
       <div class="section-title">
         <h2>PIZZA</h2>
@@ -805,9 +803,6 @@
       </div>
     </section>
 
-    <!-- image section -->
-    <section id="Image3"></section>
-
     <!-- burgers section -->
     <section id="Burgers" class="Section">
       <div class="section-title">
@@ -871,8 +866,6 @@
       </div>
     </section>
 
-    <!-- image section -->
-    <section id="Image4"></section>
 
     <!-- drinks section -->
     <section id="Drinks" class="Section">
@@ -1002,9 +995,6 @@
         </div>
       </div>
     </section>
-
-    <!-- image section -->
-    <section id="Image5"></section>
 
     <!-- add extra section -->
     <section id="Add-extra" class="Section">
@@ -1141,8 +1131,6 @@
       </div>
     </section>
 
-    <!-- image section -->
-    <section id="Image6"></section>
 
     <!-- arguile section -->
     <section id="Arguile" class="Section">
