--- a/index-menu.html
+++ b/index-menu.html
@@ -354,9 +354,27 @@
           </div>
         </div>
       </div>
+      <!-- item -->
+      <div class="section-container" onclick="addToOrder(this)">
+        <img src="images/captain's pizza.jpg" alt="Appetizer Image" />
+        <div class="section-item-container">
+          <div class="section-name-and-price">
+            <h1 class="itemName">Chef Salad</h1>
+            <h1 class="itemPrice">9.00$</h1>
+          </div>
+          <div class="section-item-description">
+            <h2>
+              Lettuce, Chicken, Hamand Cheese, Eggs, Corn, Olives, Cucumber,
+              Tomato, Mixed with Lemon Mayo Sauce
+            </h2>
+          </div>
+        </div>
+      </div>
     </section>
 
-   <!-- pizza section -->
+    <!-- image section -->
+    <section id="Image2"></section>
+
     <section id="Pizza" class="Section">
       <div class="section-title">
         <h2>PIZZA</h2>
@@ -803,6 +821,9 @@
       </div>
     </section>
 
+    <!-- image section -->
+    <section id="Image3"></section>
+
     <!-- burgers section -->
     <section id="Burgers" class="Section">
       <div class="section-title">
@@ -866,6 +887,8 @@
       </div>
     </section>
 
+    <!-- image section -->
+    <section id="Image4"></section>
 
     <!-- drinks section -->
     <section id="Drinks" class="Section">
@@ -995,6 +1018,9 @@
         </div>
       </div>
     </section>
+
+    <!-- image section -->
+    <section id="Image5"></section>
 
     <!-- add extra section -->
     <section id="Add-extra" class="Section">
@@ -1131,6 +1157,8 @@
       </div>
     </section>
 
+    <!-- image section -->
+    <section id="Image6"></section>
 
     <!-- arguile section -->
     <section id="Arguile" class="Section">
