--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Food Ordering</title>
+    <title>Captain's Pizza</title>
     <link rel="shortcut icon" href="images/WoodOven inside Logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
@@ -83,7 +83,6 @@
       </div>
 
       <div class="item" data-name="Mozzarella Sticks" data-price="6.00">
-        <img src="images/mozzarella-sticks.jpg" alt="Mozzarella Sticks" />
         <div class="itemnameanddes">
           <h2>Mozzarella Sticks</h2>
           <p class="description">
@@ -102,7 +101,6 @@
       </div>
 
       <div class="item" data-name="Garlic Bread" data-price="5.00">
-        <img src="images/garlic-bread.jpg" alt="Garlic Bread" />
         <div class="itemnameanddes">
           <h2>Garlic Bread</h2>
           <p class="description">
@@ -121,7 +119,6 @@
       </div>
 
       <div class="item" data-name="French Fries" data-price="4.00">
-        <img src="images/french-fries.jpg" alt="French Fries" />
         <div class="itemnameanddes">
           <h2>French Fries</h2>
           <p class="description">Crispy golden fries served with ketchup.</p>
@@ -138,7 +135,6 @@
       </div>
 
       <div class="item" data-name="Chicken Sticks" data-price="7.00">
-        <img src="images/chicken-sticks.jpg" alt="Chicken Sticks" />
         <div class="itemnameanddes">
           <h2>Chicken Sticks</h2>
           <p class="description">
@@ -158,7 +154,6 @@
       </div>
 
       <div class="item" data-name="Calamari" data-price="9.00">
-        <img src="images/calamari.jpg" alt="Calamari" />
         <div class="itemnameanddes">
           <h2>Calamari</h2>
           <p class="description">
@@ -177,7 +172,6 @@
       </div>
 
       <div class="item" data-name="Potato Wedges" data-price="5.50">
-        <img src="images/potato-wedges.jpg" alt="Potato Wedges" />
         <div class="itemnameanddes">
           <h2>Potato Wedges</h2>
           <p class="description">
