--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
           <div class="social-media">
             <a
-              href="https://www.facebook.com/share/16Gu1WcKxL/">
+              href="https://www.facebook.com/profile.php?id=100066420747274&mibextid=ZbWKwL">
               <i class="fa-brands fa-facebook-f"></i></a>
             <p>facebook</p>
           </div>
@@ -82,6 +82,7 @@
         <a href="#addextra"><button>Add Extra</button></a>
       </div>
     </section>
+
 
     <section id="appetizers" class="items-section">
       <div class="menu-title">
@@ -146,8 +147,12 @@
         <p>Select Branch:</p>
         <select name="branch" id="selectBranch">
           <option value="Select">Select</option>
+          <option value="Assia">Assia</option>
           <option value="Batroun">Batroun</option>
           <option value="Douma">Douma</option>
+          <option value="Jbeil">Jbeil</option>
+          <option value="Tannourine">Tannourine</option>
+          <option value="Kaslik">Kaslik</option>
         </select>
         <button id="order-btn">Order</button>
         <button class="closeTakeaway">Close</button>
@@ -169,7 +174,12 @@
         <h1>Select the nearby branch:</h1>
         <select name="branch" id="selectBranchDelivery">
           <option value="Select">Select</option>
+          <option value="Assia">Assia</option>
           <option value="Batroun">Batroun</option>
+          <option value="Douma">Douma</option>
+          <option value="Jbeil">Jbeil</option>
+          <option value="Tannourine">Tannourine</option>
+          <option value="Kaslik">Kaslik</option>
         </select>
         <button id="delivery-order-btn">Order Now</button>
         <button class="closeDelivery">Close</button>
