--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
           <div class="social-media">
             <a
-              href="https://www.facebook.com/profile.php?id=100066420747274&mibextid=ZbWKwL">
+              href="https://www.facebook.com/share/16Gu1WcKxL/">
               <i class="fa-brands fa-facebook-f"></i></a>
             <p>facebook</p>
           </div>
